@@ -17,7 +17,7 @@ DESCRIPTION
 
 **Date::Utils** is a collection of routines to help users calculate certain dates in relation to other dates provided by Raku's powerful `Date` class.
 
-Current routine provided:
+Current routines provided:
 
   * `nth-day-of-week-in-month`
 
@@ -27,7 +27,31 @@ Current routine provided:
          :$debug
          --> Date) {...}
 
-If `$nth` is greater than the actual number of `day-of-week`s in the desired month or if that number is negative, the date of its last appearance in that month is returned.
+If `$nth` is greater than the actual number of `day-of-week`s in the desired month or if that number is zero or negative, the date of its last appearance in that month is returned.
+
+As a convenience, a version of the same routine requiring fewer key strokes is provided:
+
+    sub nth-dow-in-month(
+         :$year!, :$month!, :$nth! is copy, 
+         :$dow! where {0 < $_ <= 7}, 
+         :$debug
+         --> Date) {...}
+
+  * `nth-day-of-week-after-date`
+
+    sub nth-day-of-week-after-date(
+         Date :$date!, :$nth! is copy, 
+         :$day-of-week! where {0 < $_ <= 7}, 
+         :$debug
+         --> Date) {...}
+
+As a convenience, a version of the same routine requiring fewer key strokes is provided:
+
+    sub nth-dow-after-date(
+         Date :$date!, :$nth! is copy, 
+         :$dow! where {0 < $_ <= 7}, 
+         :$debug
+         --> Date) {...}
 
 AUTHOR
 ======
