@@ -18,7 +18,7 @@ B<Date::Utils> is a collection of routines to help users calculate
 certain dates in relation to other dates provided by Raku's powerful
 C<Date> class.
 
-Current routine provided:
+Current routines provided:
 
 =item C<nth-day-of-week-in-month>
 
@@ -31,8 +31,41 @@ sub nth-day-of-week-in-month(
 =end code
 
 If C<$nth> is greater than the actual number of C<day-of-week>s in
-the desired month or if that number is negative, the date of its last appearance in
-that month is returned.
+the desired month or if that number is zero or negative, the date 
+of its last appearance in that month is returned.
+
+As a convenience, a version of the same routine 
+requiring fewer key strokes is provided:
+
+=begin code
+sub nth-dow-in-month(
+     :$year!, :$month!, :$nth! is copy, 
+     :$dow! where {0 < $_ <= 7}, 
+     :$debug
+     --> Date) {...}
+=end code
+
+=item C<nth-day-of-week-after-date>
+
+=begin code
+sub nth-day-of-week-after-date(
+     Date :$date!, :$nth! is copy, 
+     :$day-of-week! where {0 < $_ <= 7}, 
+     :$debug
+     --> Date) {...}
+=end code
+
+As a convenience, a version of the same routine 
+requiring fewer key strokes is provided:
+
+=begin code
+sub nth-dow-after-date(
+     Date :$date!, :$nth! is copy, 
+     :$dow! where {0 < $_ <= 7}, 
+     :$debug
+     --> Date) {...}
+=end code
+
 
 =head1 AUTHOR
 
