@@ -1,10 +1,20 @@
 unit module Date::Utils;
 
+sub nth-dow-in-month(
+    :$year!, :$month!, :$nth! is copy, 
+    :$dow! where {0 < $_ <= 7}, 
+    :$debug
+    --> Date) is export {
+
+    nth-day-of-week-in-month :$year, :$month, :$nth, 
+    :day-of-week($dow), :$debug
+}
+
 sub nth-day-of-week-in-month(
-     :$year!, :$month!, :$nth! is copy, 
-     :$day-of-week! where {0 < $_ <= 7}, 
-     :$debug
-     --> Date) is export {
+    :$year!, :$month!, :$nth! is copy, 
+    :$day-of-week! where {0 < $_ <= 7}, 
+    :$debug
+    --> Date) is export {
 
     if $nth < 1 {
         $nth = 10;
@@ -38,3 +48,43 @@ sub nth-day-of-week-in-month(
     $dd
 }
 
+sub nth-dow-after-date(
+    Date :$date!, :$nth! is copy, 
+    :$dow! where {0 < $_ <= 7}, 
+    :$debug
+    --> Date) {
+
+    nth-day-of-week-after-date :$date, :$nth, 
+    :day-of-week($dow), :$debug
+}
+
+sub nth-day-of-week-after-date(
+    Date :$date!, :$nth! is copy, 
+    :$day-of-week! where {0 < $_ <= 7}, 
+    :$debug
+    --> Date) {
+
+    if $nth < 1 {
+        $nth = 10;
+    }
+
+    # get the first dow after the start date
+    my Date $d = $date;
+    my $dow = $d.day-of-week;
+    # find first instance after the start date
+    while $dow != $day-of-week {
+        $d += 1;
+        $dow = $d.day-of-week;
+    }
+
+    my $instance = 1;
+    my $dd       = $d;
+
+    # find the nth instance after the start date
+    while $instance != $nth {
+        $dd += 7;
+        # keep going
+        $instance += 1;
+    }
+    $dd
+}
