@@ -1,6 +1,8 @@
 Revision history for Date-Utils
 
 {{$NEXT}}
+    - Add three routines
+    - Improve tests and documentation
 
 0.0.1  2023-03-09T20:37:17-06:00
     - Initial version
